--- a/stylesheet.css
+++ b/stylesheet.css
@@ -154,6 +154,10 @@ a{
   transition: transform 0.3s ease;
 }
 
+.call-to-action {
+  width: 40%;
+}
+
 /* Når musen holdes over linket */
 .call-to-action a:hover {
   /* Forstør linket en smule */
@@ -273,7 +277,7 @@ footer{
 
 /*--------------------------------------------------FORSIDE--------------------------------------------------*/
 .logo-forside{
-  width: 10%;
+  width: 26%;
 }
 
 /*----------------------------OPSKRIFTER PÅ FORSIDEN----------------------------*/
@@ -652,10 +656,12 @@ button {
 
     /*Styling til forside*/
     .logo-forside{
-      width: 25%;
+      width: 80%;
     }
 
-
+    .call-to-action {
+      width: 70%
+    }
 
     /*Styling for collage*/
     .collage-container{
