--- a/stylesheet.css
+++ b/stylesheet.css
@@ -258,6 +258,12 @@ a {
   width: 28%;
 }
 
+.skaal img {
+  margin-bottom: 80px;
+  min-width: 200px;
+  max-width: 300px;
+}
+
 .illustration-introduktion-sommer1{
   transform: rotate(-25deg);
 }
