--- a/stylesheet.css
+++ b/stylesheet.css
@@ -374,6 +374,23 @@ footer{
 
 
 
+/* ============================================================================================================================= */
+/* ===   Årstidssider   === */
+/* ============================================================================================================================= */
+
+.knap-aarstider{
+  background-color: var(--primær-orange);
+  color: var(--primær-blå);
+  border: none;
+  padding: 0;
+  margin: 10px 0 0 0;
+  text-align: start;
+  font-family: poppins;
+}
+
+.knap-aarstider a:hover{
+  color: var(--sekundær-blå);
+}
 
 
 /* ============================================================================================================================= */
