--- a/stylesheet.css
+++ b/stylesheet.css
@@ -105,6 +105,11 @@ a {
   }
 
 
+.aktiv{
+  font-weight: bold;
+}
+
+
 /* ============================================================================================================================= */
 /* ===   DROPDOWN MENU - EGEN STYLING   === */
 /* ============================================================================================================================= */
