--- a/stylesheet.css
+++ b/stylesheet.css
@@ -79,6 +79,9 @@ a {
   text-decoration: none;
 }
 
+h5 {
+  font-family: 'Poppins Semibold';
+}
 
 
 
@@ -106,7 +109,7 @@ a {
 
 
 .aktiv{
-  font-weight: bolder;
+  color: pink
 }
 
 
