--- a/stylesheet.css
+++ b/stylesheet.css
@@ -80,7 +80,9 @@ a {
 }
 
 h5 {
-  font-family: 'Poppins Semibold';
+  font-family: 'Poppins', sans-serif;
+  font-size: 1rem;
+  font-weight: bolder;
 }
 
 
