--- a/stylesheet.css
+++ b/stylesheet.css
@@ -314,6 +314,11 @@ li.aktiv a, .dropdown-content a.aktiv, a.aktiv  {
     width: 50%;
 }
 
+.knap-forside{
+  width: 50px;
+  padding: 3px;
+}
+
 /* ========================================================================= */
 /* ===   COLLAGE M. TILMELDING TIL E-MAGASIN  === */
 /* ========================================================================= */
@@ -767,7 +772,7 @@ button {
   
     /*position og str. på collage-billeder justeres for mindre skærm */
     .kurv{ top: 0%; left: 20%; width: 35%;}
-    .foraarsbord{top: 70%; left: 10%; width: 37%; z-index: 4; transform: rotate(-6deg);}
+    .foraarsbord{top: 73%; left: 10%; width: 37%; z-index: 4; transform: rotate(-6deg);}
     .asparges{display: none;}
     .tomat{ top: 8%; left: 53%; width:17%; z-index: 2;}
     .foraarsmad{ top: 75%; left: 40%; width: 40%; display: block;}
