--- a/stylesheet.css
+++ b/stylesheet.css
@@ -655,6 +655,10 @@ button {
     .overskrift-kontakt{
     font-size: 1.7rem;
   }
+
+    .overskrift-lille{
+      font-size: 3rem;
+    }
   
     /* ========================================================================= */
     /* ===   NAV-BAR   === */
@@ -745,6 +749,14 @@ button {
     padding-right: 15px;
   }
 
+  /* ========================================================================= */
+    /* ===   SKRIFT-STR.   === */
+    /* ========================================================================= */
+
+    .overskrift-lille{
+      font-size: 3rem;
+    }
+
     /* ========================================================================= */
     /* ===   FORSIDE   === */
     /* ========================================================================= */
@@ -783,6 +795,8 @@ button {
 
 
 
+
+ 
   
   /* ========================================================================= */
   /* ===   OPSKRIFTER M. COLLAGE   === */
