--- a/stylesheet.css
+++ b/stylesheet.css
@@ -273,6 +273,18 @@ li.aktiv a, .dropdown-content a.aktiv, a.aktiv  {
 }
 
 /* ============================================================================================================================= */
+/* ===   POP UP BESKED MED E-MAGASIN  === */
+/* ============================================================================================================================= */
+.emagasin-popup {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 20%;
+  z-index: 999;
+  transition: background-color 0.3s ease;
+}
+
+/* ============================================================================================================================= */
 /* ===   FORSIDE  === */
 /* ============================================================================================================================= */
 
@@ -668,7 +680,13 @@ button {
     height: 40px;
     width: auto;
   }
-  
+
+
+  /* ============================================================================================================================= */
+  /* ===   POP UP BESKED MED E-MAGASIN  === */
+  /* ============================================================================================================================= */
+  .emagasin-popup {
+    width: 25%; }
 
     /* ========================================================================= */
     /* ===   FORSIDE   === */
@@ -756,6 +774,13 @@ button {
     .overskrift-lille{
       font-size: 3rem;
     }
+
+
+  /* ============================================================================================================================= */
+  /* ===   POP UP BESKED MED E-MAGASIN  === */
+  /* ============================================================================================================================= */
+  .emagasin-popup {
+    width: 50%; }
 
     /* ========================================================================= */
     /* ===   FORSIDE   === */
