--- a/stylesheet.css
+++ b/stylesheet.css
@@ -372,6 +372,11 @@ li.aktiv a, .dropdown-content a.aktiv, a.aktiv  {
 }
 
 
+/* ========================================================================= */
+/* ===   FÆLLESKAAL  === */
+/* ========================================================================= */
+
+.insta-jordbaer{left: 31%;}
 
 
 /* ============================================================================================================================= */
@@ -582,6 +587,8 @@ button {
     width: 400px; 
     height: auto; 
   }
+
+
   
 
 /* ============================================================================================================================= */
@@ -748,7 +755,6 @@ button {
   
 
     }
-
 
 
 /* ============================================================================================================================= */
