--- a/stylesheet.css
+++ b/stylesheet.css
@@ -299,6 +299,20 @@ li.aktiv a, .dropdown-content a.aktiv, a.aktiv  {
   transition: background-color 0.3s ease;
 }
 
+.close-popup {
+  position: absolute;
+  top: 2px;
+  right: 5px;
+  background: var(--sekundær-orange);
+  color: var(--primær-blå);
+  border: none;
+  font-size: 12px;
+  cursor: pointer;
+  padding: 2px 6px;
+  border-radius: 50%;
+  width: 23px
+}
+
 /* ============================================================================================================================= */
 /* ===   FORSIDE  === */
 /* ============================================================================================================================= */
