--- a/stylesheet.css
+++ b/stylesheet.css
@@ -407,7 +407,11 @@ li.aktiv a, .dropdown-content a.aktiv, a.aktiv  {
 /* ===   FÆLLESKAAL  === */
 /* ========================================================================= */
 
-.insta-jordbaer{left: 31%;}
+.insta-jordbaer{
+  left: 31%;
+  width: 20%;
+}
+
 
 
 /* ============================================================================================================================= */
