--- a/stylesheet.css
+++ b/stylesheet.css
@@ -402,6 +402,17 @@ li.aktiv a, .dropdown-content a.aktiv, a.aktiv  {
     box-sizing: border-box;
 }
 
+
+/* ========================================================================= */
+/* ===   FÆLLESKAAL  === */
+/* ========================================================================= */
+
+.insta-jordbaer{
+  width: 20%;
+}
+
+
+
 /* ============================================================================================================================= */
 /* ===   FOOTER   === */
 /* ============================================================================================================================= */
