--- a/stylesheet.css
+++ b/stylesheet.css
@@ -385,8 +385,8 @@ li.aktiv a, .dropdown-content a.aktiv, a.aktiv  {
 .kurv{ top: 8%; left: 10%; width: 27%; transform: rotate(-5deg)}
 .foraarsbord{ top: 43%; left: 20%; width: 25%;}
 .asparges{ top: 73%; left: 16%; width: 15%; transform: rotate(-60deg);}
-.tomat{ top: 22%; left: 62%; width:10%; z-index: 2;}
-.foraarsmad{ top: 73%; left: 63%; width: 15%; z-index: 2;}
+.tomat{ top: 20%; left: 62%; width:10%; z-index: 2;}
+.foraarsmad{ top: 75%; left: 63%; width: 15%; z-index: 2;}
 .driver{ top: 45%; left: 73%; width: 20%; transform: rotate(8deg)}
 .vin{ top: 5%; left: 65%; width: 25%; transform: rotate(3deg)}
 
@@ -644,7 +644,7 @@ button {
     .asparges{ top: 71%; left: 14%; width: 15%; transform: rotate(-55deg);}
     .tomat{ top: 18%; left: 62%; width:10%; z-index: 2;}
     .foraarsmad{ top: 80%; left: 64%; width: 15%; z-index: 2;}
-    .driver{ top: 55%; left: 74%; width: 20%;}
+    .driver{ top: 55%; left: 80%; width: 20%;}
     .vin{ top: 2%; left: 65%; width: 25%;}
     
     /*positionering og str. af tilmeldings'boks' justeres */
@@ -742,10 +742,10 @@ button {
     .kurv{ top: 8%; left: 10%; width: 27%;}
     .foraarsbord{top: 44%; left: 10%; width: 25%;}
     .asparges{ top: 75%; left: 80%; width: 15%; transform: rotate(10deg);}
-    .tomat{ top: 18%; left: 62%; width:10%; z-index: 2;}
+    .tomat{ top: 15%; left: 58%; width:10%; z-index: 2;}
     .foraarsmad{display: none;}
     .driver{display: none;}
-    .vin{left: 65%; width: 25%;}
+    .vin{left: 62%; width: 21%;}
     
     /*positionering og str. af tilmeldings'boks' justeres */
     .tilmelding-boks{
@@ -839,16 +839,17 @@ button {
     .collage-container{
       /*højde på collage-sektion*/
         height: 850px;
+        margin-bottom: 12%;
     }
   
     /*position og str. på collage-billeder justeres for mindre skærm */
     .kurv{ top: 0%; left: 20%; width: 35%;}
-    .foraarsbord{top: 73%; left: 10%; width: 37%; z-index: 4; transform: rotate(-6deg);}
+    .foraarsbord{top: 72%; left: 50%; width: 35%; z-index: 4; transform: rotate(6deg);}
     .asparges{display: none;}
-    .tomat{ top: 8%; left: 53%; width:17%; z-index: 2;}
-    .foraarsmad{ top: 75%; left: 40%; width: 40%; display: block;}
+    .tomat{ top: 12%; left: 65%; width:17%; z-index: 2;}
+    .foraarsmad{ top: 80%; left: 10%; width: 40%; display: block;}
     .driver{display: none;}
-    .vin{top: 12%; left: 45%; width: 35%;}
+    .vin{top: 5%; left: 45%; width: 35%;}
     
     /*positionering og str. af tilmeldings'boks' justeres */
     .tilmelding-boks{
